--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,6 @@ on:
     branches: ["main"]
 
 env:
-  REGISTRY: docker.io
   APP_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/jonathanbet-app
   IMAGE_TAG: latest
   REMOTE_DIR: /opt/jonathanbet
@@ -66,6 +65,8 @@ jobs:
             docker compose -f docker-compose.prod.yml up -d --force-recreate
 
             echo "→ Run migrations"
+            # даём БД чуть времени, хотя есть healthcheck
+            sleep 5
             docker compose exec app_jbet php artisan migrate --force
 
             echo "→ DONE!"
