--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,9 +4,10 @@ services:
     container_name: app_jbet
     restart: always
     env_file:
-      - .env   
+      - .env
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     networks:
       - appnet
 
@@ -20,6 +21,11 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
     volumes:
       - pgdata:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USERNAME}"]
+      interval: 3s
+      timeout: 2s
+      retries: 10
     networks:
       - appnet
 
@@ -27,15 +33,15 @@ services:
     image: caddy:2
     container_name: caddy_jbet
     restart: always
+    depends_on:
+      - app
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - ./Caddyfile:/etc/caddy/Caddyfile     
+      - ./Caddyfile:/etc/caddy/Caddyfile
       - caddy_data:/data
       - caddy_config:/config
-    depends_on:
-      - app
     networks:
       - appnet
 
